# open-wearables

backend/: pyproject.toml
backend/app/: config.py  database.py
backend/app/api/routes/v1/: connections.py  sync_data.py
backend/app/repositories/: data_source_repository.py
backend/app/schemas/enums/: provider.py
backend/app/services/: event_record_service.py  user_connection_service.py
backend/app/services/providers/: factory.py
backend/app/services/providers/garmin_connect/: __init__.py  client.py  data_247.py  strategy.py  workouts.py
backend/app/services/providers/ultrahuman/: data_247.py
backend/config/: .env.example
frontend/src/routes/_authenticated/settings/: -providers-tab.tsx
mcp-server/: pyproject.toml
mcp-server/open_wearables_mcp/: server.py
