[project]
name = "open-wearables-mcp"
version = "0.1.0"
description = "Read-only MCP server for Open Wearables health data"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
open-wearables-mcp = "open_wearables_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
